feat: authentication service for operators

--- a/server/ks-server/package.json
+++ b/server/ks-server/package.json
@@ -9,10 +9,13 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.11",
+    "@vitest/coverage-v8": "^2.1.8",
     "typescript": "^5.7.2",
-    "vitest": "^1.6.0"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
