--- a/server/ks-server/tsconfig.json
+++ b/server/ks-server/tsconfig.json
@@ -7,7 +7,12 @@
     "module": "ES2022",
     "types": ["node"],
     "paths": {
-      "~encore/*": ["./encore.gen/*"]
+      "~encore/*": [
+        "./encore.gen/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ]
     },
 
     /* Workspace Settings */
